--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,7 +8,8 @@
     ]
   },
   "files": [
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/main.ts",
   ],
   "include": [
     "src/**/*.spec.ts",
