--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "name": "parallel-universe",
     "version": "0.0.0",
-
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -11,7 +10,6 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage"
-
     },
     "jest": {
         "preset": "jest-preset-angular",
@@ -39,6 +37,7 @@
         "@angular/platform-browser": "~10.1.0",
         "@angular/platform-browser-dynamic": "~10.1.0",
         "@angular/router": "~10.1.0",
+        "@auth0/angular-jwt": "^5.0.2",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
