--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1001.0",
+        "@angular-devkit/build-angular": "^0.1102.9",
         "@angular/cli": "~10.1.0",
         "@angular/compiler-cli": "~10.1.0",
         "@types/jest": "^26.0.22",
