--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/router": "~11.2.10",
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
