--- a/package.json
+++ b/package.json
@@ -29,33 +29,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.10",
-    "@angular/common": "~11.2.10",
-    "@angular/compiler": "~11.2.10",
-    "@angular/core": "~11.2.10",
-    "@angular/forms": "~11.2.10",
-    "@angular/platform-browser": "~11.2.10",
-    "@angular/platform-browser-dynamic": "~11.2.10",
-    "@angular/router": "~11.2.10",
+    "@angular/animations": "^11.2.14",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.9",
-    "@angular/cli": "~11.2.9",
-    "@angular/compiler-cli": "~11.2.10",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "^0.1102.14",
+    "@angular/cli": "^11.2.14",
+    "@angular/compiler-cli": "^11.2.14",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.34",
+    "codelyzer": "^6.0.2",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.8"
   }
 }
